--- a/spring-batch/src/main/resources/application.yaml
+++ b/spring-batch/src/main/resources/application.yaml
@@ -5,3 +5,8 @@ spring:
     url: jdbc:mysql://localhost:43306/sample
     username: root
     password: root
+
+  batch:
+    job:
+      # disabled job run at startup
+      enabled: false
