--- a/aws-app-runner/Dockerfile
+++ b/aws-app-runner/Dockerfile
@@ -1,6 +1,6 @@
-FROM public.ecr.aws/bitnami/java:latest
+FROM public.ecr.aws/bitnami/java:17.0.3-1
 VOLUME /tmp
-ADD target/spring-petclinic-2.3.0.jar app.jar
+ADD build/libs/aws-app-runner-0.0.1-SNAPSHOT.jar
 EXPOSE 80
 RUN apt-get update
 RUN apt-get -y install awscli
