--- a/aws-app-runner/buildspec.yml
+++ b/aws-app-runner/buildspec.yml
@@ -10,7 +10,9 @@ phases:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=$${COMMIT_HASH:=latest}
+      - IMAGE_TAG=${CODEBUILD_WEBHOOK_TRIGGER#branch/}
+      - echo Built Docker image latest-$COMMIT_HASH
+      - echo Built Docker image $IMAGE_TAG-$COMMIT_HASH
   build:
     commands:
       - echo Build started on `date`
@@ -18,14 +20,13 @@ phases:
       - ./gradlew build -x test --no-build-cache
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
-      - docker tag $REPOSITORY_URI:latest-$COMMIT_HASH $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
-      - echo Built Docker image latest-$COMMIT_HASH
-      - echo Built Docker image $IMAGE_TAG-$COMMIT_HASH
+      # - docker tag $REPOSITORY_URI:latest-$COMMIT_HASH $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
+      - docker tag $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
-      - docker push $REPOSITORY_URI:latest-$COMMIT_HASH
+      # - docker push $REPOSITORY_URI:latest-$COMMIT_HASH
       - docker push $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 #cache:
@@ -33,3 +34,4 @@ phases:
 #    - '/root/.m2/**/*'
 artifacts:
   files: imagedefinitions.json
+
