--- a/aws-app-runner/buildspec.yml
+++ b/aws-app-runner/buildspec.yml
@@ -10,9 +10,10 @@ phases:
       - echo Logging in to Amazon ECR...
       - $(aws ecr get-login --region $AWS_DEFAULT_REGION --no-include-email)
       - COMMIT_HASH=$(echo $CODEBUILD_RESOLVED_SOURCE_VERSION | cut -c 1-7)
-      - IMAGE_TAG=${CODEBUILD_WEBHOOK_TRIGGER#branch/}
+      - IMAGE_TAG=$(echo $TARGET_BRANCH-$COMMIT_HASH)
+      - echo $TARGET_BRANCH
       - echo Built Docker image latest-$COMMIT_HASH
-      - echo Built Docker image $IMAGE_TAG-$COMMIT_HASH
+      - echo Built Docker image $IMAGE_TAG
   build:
     commands:
       - echo Build started on `date`
@@ -21,13 +22,13 @@ phases:
       - echo Building the Docker image...
       - docker build -t $REPOSITORY_URI:latest .
       # - docker tag $REPOSITORY_URI:latest-$COMMIT_HASH $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
-      - docker tag $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
+      - docker tag $REPOSITORY_URI:latest $REPOSITORY_URI:$IMAGE_TAG
   post_build:
     commands:
       - echo Build completed on `date`
       - echo Pushing the Docker image...
       # - docker push $REPOSITORY_URI:latest-$COMMIT_HASH
-      - docker push $REPOSITORY_URI:$IMAGE_TAG-$COMMIT_HASH
+      - docker push $REPOSITORY_URI:$IMAGE_TAG
       - printf '[{"name":"%s","imageUri":"%s"}]' $CONTAINER_NAME $REPOSITORY_URI:$IMAGE_TAG > imagedefinitions.json
 #cache:
 #  paths:
